# cosmicpython

./: .gitignore  Makefile  README.md  config.py  pyproject.toml
adapters/: orm.py  repository.py
domain/: __init__.py  batches.py
entrypoints/: flask_app.py
service_layer/: services.py
tests/: conftest.py
tests/e2e/: test_api.py
tests/integration/: test_orm.py  test_repository.py
tests/unit/: test_allocate.py  test_batches.py  test_services.py
